@@ -1,3 +1,7 @@
+2005-07-22  Tim Waugh  <twaugh@redhat.com>
+
+	* doc/patchutils.xml: Use referenceinfo for including author section.
+
 2005-06-13  Tim Waugh  <twaugh@redhat.com>
 
 	* configure.in: Version 0.2.31.
